[gd_scene load_steps=16 format=2]

[ext_resource path="res://Slime.gd" type="Script" id=1]
[ext_resource path="res://sprites/Slime.png" type="Texture" id=2]
[ext_resource path="res://sprites/Slime_death_anim.png" type="Texture" id=3]
[ext_resource path="res://Enemy_health_bar.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "death",
"speed": 9.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
custom_solver_bias = 1.0
radius = 9.1582
height = 10.6244

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 16.2369, 10 )

[node name="Slime" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="monster_2" type="AnimatedSprite" parent="."]
position = Vector2( -0.923829, -3.69944 )
scale = Vector2( 0.331516, 0.292172 )
frames = SubResource( 9 )
animation = "idle"
frame = 3
speed_scale = 1.708
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.56085e-05, -0.795799 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="SwitchDirection" type="Timer" parent="."]

[node name="floor_detector_left" type="RayCast2D" parent="."]
position = Vector2( -17.3241, -5.3033 )
enabled = true

[node name="floor_detector_right" type="RayCast2D" parent="."]
position = Vector2( 16.2635, -4.41942 )
enabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 11 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthShowingTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Enemy_health_bar" parent="." instance=ExtResource( 4 )]
margin_left = -16.8612
margin_top = -22.4991
margin_right = 111.139
margin_bottom = 105.501
rect_scale = Vector2( 0.255, 0.125 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
